WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
112183
DFG generic array access cases should not be guarded by CheckStructure even of the profiling tells us that it could be
https://bugs.webkit.org/show_bug.cgi?id=112183
Summary
DFG generic array access cases should not be guarded by CheckStructure even o...
Filip Pizlo
Reported
2013-03-12 13:24:28 PDT
Patch forthcoming.
Attachments
the patch
(3.36 KB, patch)
2013-03-12 13:25 PDT
,
Filip Pizlo
oliver
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Filip Pizlo
Comment 1
2013-03-12 13:25:50 PDT
Created
attachment 192794
[details]
the patch
Filip Pizlo
Comment 2
2013-03-12 13:40:51 PDT
Landed in
http://trac.webkit.org/changeset/145578
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug