DFG generic array access cases should not be guarded by CheckStructure even of the profiling tells us that it could be https://bugs.webkit.org/show_bug.cgi?id=112183

Reviewed by Oliver Hunt.

Slight speed-up on string-unpack-code.

* dfg/DFGFixupPhase.cpp:
(JSC::DFG::FixupPhase::findAndRemoveUnnecessaryStructureCheck):
(FixupPhase):
(JSC::DFG::FixupPhase::checkArray):
(JSC::DFG::FixupPhase::blessArrayOperation):



Canonical link: https://commits.webkit.org/130496@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@145578 268f45cc-cd09-0410-ab3c-d52691b4dbfc